@@ -2,14 +2,12 @@ package me.mrnavastar.protoweaver.proxy;
 
 import com.google.inject.Inject;
 import com.velocitypowered.api.event.Subscribe;
-import com.velocitypowered.api.event.proxy.ProxyInitializeEvent;
 import com.velocitypowered.api.event.proxy.ProxyShutdownEvent;
 import com.velocitypowered.api.event.proxy.server.ServerRegisteredEvent;
 import com.velocitypowered.api.event.proxy.server.ServerUnregisteredEvent;
 import com.velocitypowered.api.plugin.Plugin;
 import com.velocitypowered.api.plugin.annotation.DataDirectory;
 import com.velocitypowered.api.proxy.ProxyServer;
-import com.velocitypowered.api.proxy.server.RegisteredServer;
 import com.velocitypowered.api.proxy.server.ServerInfo;
 import me.mrnavastar.protoweaver.core.util.ProtoConstants;
 import me.mrnavastar.protoweaver.core.util.ProtoLogger;
@@ -19,7 +17,6 @@ import org.slf4j.Logger;
 
 import java.nio.file.Path;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Plugin(
         id = ProtoConstants.PROTOWEAVER_ID,
@@ -29,22 +26,16 @@ import java.util.stream.Collectors;
 )
 public class Velocity implements ServerSupplier, ProtoLogger.IProtoLogger {
 
-    private final Path dir;
     private final ProxyServer proxy;
     private final Logger logger;
-    private ProtoProxy protoProxy;
+    private final ProtoProxy protoProxy;
 
     @Inject
     public Velocity(ProxyServer proxyServer, Logger logger, @DataDirectory Path dir) {
         this.proxy = proxyServer;
-        this.dir = dir;
         this.logger = logger;
-        ProtoLogger.setLogger(this);
-    }
-
-    @Subscribe
-    public void onProxyInitialize(ProxyInitializeEvent event) {
         protoProxy = new ProtoProxy(this, dir);
+        ProtoLogger.setLogger(this);
     }
 
     @Subscribe
@@ -68,7 +59,7 @@ public class Velocity implements ServerSupplier, ProtoLogger.IProtoLogger {
     public List<ProtoServer> getServers() {
         return proxy.getAllServers().stream()
                 .map(server -> new ProtoServer(server.getServerInfo().getName(), server.getServerInfo().getAddress()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
